--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ header{
     height: 100vh;
     background-size: cover;
     background-position: center;
-
+    background-attachment: fixed;
 }
 
 ul{
@@ -66,7 +66,8 @@ ul li.active a{
 .navbar{
     overflow: hidden;
     background-color: rgba(0,0,0,0.5);
-    position:relative;
+    position: fixed;
+    width: 100%;
 }
 
 .navbar #Links {
@@ -75,6 +76,7 @@ ul li.active a{
 
 .navbar a:hover {
     background-color: #ddd;
+    text-decoration: none;
     color: black;
 }
 
@@ -90,6 +92,7 @@ ul li.active a{
 
 #nav4:hover {
     animation: nav4anim 2s linear 0s infinite alternate-reverse;
+    background-color: black;
     outline-offset: -3px;
     box-shadow: 0 0 8px #ebfc79;
 }
@@ -120,11 +123,34 @@ ul li.active a{
     font-size: 70px;
 }
 
-.button{
+button {
     position: absolute;
-    top: 60%;
+    width: 100px;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translateX(-50%);
+    color: white;
+    background: rgba(0, 0, 0, 0.1);
+    border: none;
+    font-family: Lato;
+    font-size: 30px;
+    text-transform: uppercase;
+    cursor: pointer;
+    font-weight: 300;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.numdice {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 520px;
+    color: #555;
+    font-size: 18px;
+    font-family: 'Lato';
+    text-align: center;
+    padding: 10px;
+    width: 160px;
+    text-transform: uppercase;
 }
 
 .btn{
@@ -137,4 +163,161 @@ ul li.active a{
 .btn:hover{
     background-color: #fff;
     color: #000;
+}
+
+.wrapper {
+    width: 1000px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 600px;
+    transform: translate(-50%, -50%);
+    background-color: transparent;
+    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+}
+
+.btn-numdice {
+    top: 405px;
+    left: 450px;
+}
+
+.btn-sizedice {
+    top: 405px;
+    left: 550px;
+}
+
+.btn-result {
+    top: 300px;
+}
+
+.btn-roll {
+    top: 500px;
+}
+
+.clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+/* Create four equal columns that sits next to each other */
+.column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+}
+  
+.column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+    .column {
+        flex: 50%;
+        max-width: 50%;
+    }
+}
+
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+        flex: 100%;
+        max-width: 100%;
+    }
+}
+
+/* img {
+    float: left;
+    width:  100px;
+    height: 100px;
+    object-fit: cover;
+} */
+
+.screenpad {
+    padding-top: 100vh;
+}
+
+.gallery {
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.9)), url(../images/fuji.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    overflow-y: scroll;
+}
+
+#thumbnail {
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+#thumbnail:hover {
+    filter: brightness(50%);
+    transition: 0.2s ease-in-out;
+}
+
+/* Modal Content (Image) */
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+  
+  /* Caption of Modal Image (Image Text) - Same Width as the Image */
+#caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+  
+  /* Add Animation - Zoom in the Modal */
+.modal-content, #caption {
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+  
+@keyframes zoom {
+    from {transform:scale(0)}
+    to {transform:scale(1)}
+}
+  
+  /* The Close Button */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+  
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+  
+  /* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px) {
+    .modal-content {
+        width: 100%;
+    }
 }
